--- a/style.css
+++ b/style.css
@@ -25,3 +25,89 @@ h1,h2,h3
 }
 
 
+
+/*1 блок*/
+.block1
+{
+    background-color: white;
+    width: 80%;
+    margin-left: 10%;
+    padding:1%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+/*1 flex-container в 1 блоке*/
+.block1_1_container
+{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1em;
+    flex-wrap: nowrap;
+}
+.block1_1_header
+{
+    color: black;
+    font-size: 1.2em;
+}
+.block1_1_1_item
+{
+    flex-grow: 2;
+}
+.block1_1_2_item
+{
+    flex-grow: 3;
+}
+.block1_1_3_item
+{
+    flex-grow: 3;
+}
+.block1_1_4_item
+{
+    flex-grow: 2;
+}
+
+/*2 flex-container в 1 блоке*/
+.block1_2_container
+{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 1em;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.block1_2_header
+{
+    color: black;
+    font-size: 1.2em;
+}
+.block1_2_1_item
+{
+    order: 2;
+}
+
+/*3 flex-container в 1 блоке*/
+.block1_3_container
+{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+}
+.block1_3_header
+{
+    color: black;
+    font-size: 1.2em;
+}
+
+/*4 flex-container в 1 блоке*/
+.block1_4_container
+{
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 1em;
+}
+.block1_4_header
+{
+    color: black;
+    font-size: 1.2em;
+}
