--- a/style.css
+++ b/style.css
@@ -111,3 +111,76 @@ h1,h2,h3
     color: black;
     font-size: 1.2em;
 }
+
+
+/*2 блок */
+.block2
+{
+    background-color: white;
+    width: 80%;
+    margin-left: 10%;
+    padding:1%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+/*1 flex-container в 2 блоке*/
+.block2_1_container
+{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: flex-end;
+}
+
+
+
+/*3 блок*/
+.block3
+{
+    background-color: white;
+    width: 80%;
+    margin-left: 10%;
+    padding:1%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+/*1 flex-container в 3 блоке*/
+.block3_1_container
+{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.block3_1_1_item
+{
+    height: 30em;
+}
+
+
+
+/*Общие элементы для всех flex-item*/
+.image
+{
+    width: 100%;
+}
+.item_header
+{
+    text-align: center;
+    font-size: 1.5em;
+    width: 100%;
+}
+.item_text
+{
+    display: block;
+    text-align: center;
+    overflow-x: auto;
+    width: 100%;
+}
+.item
+{
+    background-color: rgb(240, 235, 255);
+    border: 5px solid black;
+    width: 10em;
+}
